SEAMCRON-11 Fix intervals for @Every(...) triggers